--- a/build.gradle
+++ b/build.gradle
@@ -3,3 +3,10 @@ plugins {
     alias(libs.plugins.android.application) apply false
     id 'com.google.gms.google-services' version '4.4.2' apply false
 }
+
+//buildscript {
+//    dependencies {
+//        // Add this line
+//        classpath 'com.google.gms:google-services:4.3.15'
+//    }
+//}
