--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:theme="@style/Theme.Assignment3"
             tools:targetApi="31">
         <activity
-                android:name="view.MainActivity"
+                android:name=".view.MainActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +23,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="view.RegisterActivity" android:exported="true"/>
-        <activity android:name="view.LoginActivity" android:exported="true"/>
-        <activity android:name="view.AddEditMovieActivity" android:exported="true"/>
-
+        <activity android:name=".view.RegisterActivity" android:exported="true"/>
+        <activity android:name=".view.LoginActivity" android:exported="true"/>
+        <activity android:name=".view.AddEditMovieActivity" android:exported="true"/>
+        <activity android:name=".view.SearchMoviesActivity" android:exported="true"/>
 
     </application>
 
